[gd_scene load_steps=2 format=2]

[ext_resource path="res://InfoPanel.gd" type="Script" id=1]

[node name="HeroPanel" type="PanelContainer"]
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 53.0
margin_bottom = 75.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 46.0
margin_bottom = 68.0
custom_constants/separation = 10

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 46.0
margin_bottom = 68.0
columns = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_right = 42.0
margin_bottom = 14.0
text = "Name"

[node name="NameValue" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 46.0
margin_right = 46.0
margin_bottom = 14.0

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 18.0
margin_right = 42.0
margin_bottom = 32.0
text = "Health"

[node name="HealthValue" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 46.0
margin_top = 18.0
margin_right = 46.0
margin_bottom = 32.0

[node name="SpeedLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 36.0
margin_right = 42.0
margin_bottom = 50.0
text = "Speed"

[node name="SpeedValue" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 46.0
margin_top = 36.0
margin_right = 46.0
margin_bottom = 50.0

[node name="AttackLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 54.0
margin_right = 42.0
margin_bottom = 68.0
text = "Attack"

[node name="AttackValue" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 46.0
margin_top = 54.0
margin_right = 46.0
margin_bottom = 68.0
